trunk/Archive2/6e/816cd6e99a9a10/output
main.cpp:16:18: error: 'a' is a private member of 'fruit'
   printf("%d",f.a); // error: a is private; works as I expect
                 ^
main.cpp:3:18: note: declared private here
    private: int a;
                 ^
1 error generated.
